<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.PraMainFragment">


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="357dp"
        android:src="@drawable/join_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selamat Datang Di "
        android:textColor="@color/dark_primary"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/dark_primary"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_welcome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_pra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/dark_primary"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/ButtonTextLogin"
        android:textSize="18dp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_pra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="50dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:backgroundTint="@color/green"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ButtonTextRegister"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_pra" />

</androidx.constraintlayout.widget.ConstraintLayout>