<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.AboutUsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_kembali_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/primary"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/tentangkami"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/btn_kembali_main"
                android:backgroundTint="@color/primary"
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:id="@+id/aboutusLn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/aboutus"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:justificationMode="inter_word"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/about_paragraph_1"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:justificationMode="inter_word"
                        android:layout_marginTop="10dp"
                        android:text="@string/about_paragraph_2"
                        android:textColor="@color/black"
                        android:layout_marginBottom="10dp"/>

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginHorizontal="10dp"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:text="Lokasi Perusahaan"-->
<!--                        android:textStyle="bold"-->
<!--                        android:textSize="20dp"-->
<!--                        android:textColor="@color/black"-->
<!--                        android:layout_marginBottom="10dp"/>-->

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_lokasiPerusahaan"
                        android:layout_marginVertical="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lokasi Perusahaan"
                        app:cornerRadius="20dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:backgroundTint="@color/secondary"
                        />

                </LinearLayout>
                </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tentangkami"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/primary"
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/tentangpcr"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:justificationMode="inter_word"
                        android:text="@string/about_paragraph_mhs_1"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:justificationMode="inter_word"
                        android:text="@string/about_paragraph_mhs_2"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_lokasikampus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="20dp"
                        android:backgroundTint="@color/secondary"
                        android:text="Lokasi Perusahaan"
                        android:textColor="@color/white"
                        app:cornerRadius="20dp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>




        </RelativeLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>