<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.AdminInputMapsActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_kembali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_primary"
                android:layout_marginStart="15dp"
                android:drawableLeft="@drawable/ic_back"
                android:drawableTint="@color/white"
                android:text="Kembali"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/input_lokasi"
                android:layout_width="280dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:inputType="textPersonName"
                />
            <Button
                android:id="@+id/btn_cari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_primary"
                android:onClick="CariLokasi"
                android:text="@string/btn_carilokasi"
                android:textColor="#fff"
                android:textSize="13sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btn_ambil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/green"
            android:text="@string/btn_ambilLokasi1"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            />

        <Button
            android:id="@+id/btn_ambil2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/green"
            android:text="@string/btn_ambilLokasi2"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>
</fragment>