<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="220dp"
        android:layout_height="260dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txtLogin"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="@color/dark_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/custom_email_icon"
        app:startIconTint="@color/dark_primary"
        android:textColorHint="@color/dark_primary"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="25dp"
            android:paddingEnd="20dp"
            android:background="@drawable/custom_input"
            android:hint="@string/email"
           />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txl_password"
        app:startIconDrawable="@drawable/custom_password_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconTint="@color/dark_primary"
        app:passwordToggleTint="@color/dark_primary"
        app:hintAnimationEnabled="true"
        android:textColorHint="@color/dark_primary"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/txl_email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="25dp"
            android:paddingEnd="20dp"
            android:background="@drawable/custom_input"
            android:inputType="textPassword"
            android:hint="Password"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        app:cornerRadius="50dp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:textSize="18dp"
        android:lineSpacingMultiplier="1"
        android:backgroundTint="@color/dark_primary"
        android:backgroundTintMode="screen"
        android:textAllCaps="false"
        android:text="@string/ButtonTextLogin"
        app:layout_constraintTop_toBottomOf="@id/txl_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>